--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   geolocator: ^7.0.3
+  http: ^0.13.3
+  flutter_spinkit: ^5.0.0
 
 dev_dependencies:
   flutter_test:
